applications/pymp/pymp_server/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pymp-server
    pymp.image: pymp-server
  name: pymp-server
  namespace: pymp
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: pymp-server
  template:
    metadata:
      labels:
        app: pymp-server
        redis: readonly
    spec:
      containers:
      - name: pymp-server
        image: ghcr.io/tomp736/pymp/pymp_server:latest
        imagePullPolicy: Always
