applications/pymp/pymp_server/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pymp-server
  namespace: pymp
  labels:
    app: pymp-server
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  - name: prom
    port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: pymp-server
