applications/pymp/pymp_server/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pymp-ingress
  namespace: pymp
spec:
  ingressClassName: traefik-public
  rules:
  - host: api.pymp.labrats.work
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pymp-server
            port:
              number: 80
